--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,14 +1,27 @@
-name: Deep Learning CI
+name: Python Package
 
 on: [push, pull_request]
 
 jobs:
-  validate:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - run: pip install -r requirements.txt
-      - run: python -m compileall src/
+
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
+        
+- uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run basic checks
+      run: |
+        python -m compileall dependencies/
